<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:statusBarColor="#00ffff"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomePageND"
    tools:showIn="@layout/app_bar_home_page_nd">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/gradient_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="64dp"
                    android:textSize="30sp"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-black"
                    android:text="Dashboard Menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="200dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="143dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@mipmap/task"
                                android:id="@+id/iv_task"
                                android:layout_centerInParent="true"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ts_button"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:id="@+id/tv_task"
                                android:fontFamily="sans-serif-condensed"
                                android:layout_centerInParent="true"
                                android:layout_below="@+id/iv_task"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                />
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button_ts"
                                android:background="@android:color/transparent"/>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@mipmap/weather"
                                android:id="@+id/iv_weather"
                                android:layout_centerInParent="true"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wth_button"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:id="@+id/tv_weather"
                                android:fontFamily="sans-serif-condensed"
                                android:layout_centerInParent="true"
                                android:layout_below="@+id/iv_weather"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                />
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button_htp"
                                android:background="@android:color/transparent"/>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@mipmap/health"
                                android:id="@+id/iv_health_tips"
                                android:layout_centerInParent="true"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/htp_str_button"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:id="@+id/tv_health_tips"
                                android:fontFamily="sans-serif-condensed"
                                android:layout_centerInParent="true"
                                android:layout_below="@+id/iv_health_tips"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                />
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button_wth"
                                android:background="@android:color/transparent"/>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/goal"
                                android:id="@+id/iv_goal"
                                android:layout_centerInParent="true"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/goal_button"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:id="@+id/tv_goal"
                                android:fontFamily="sans-serif-condensed"
                                android:layout_centerInParent="true"
                                android:layout_below="@+id/iv_goal"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                />
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button_goal"
                                android:background="@android:color/transparent"/>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@mipmap/event"
                                android:id="@+id/iv_event"
                                android:layout_centerInParent="true"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/event_btn"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:id="@+id/tv_event"
                                android:fontFamily="sans-serif-condensed"
                                android:layout_centerInParent="true"
                                android:layout_below="@+id/iv_event"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                />
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button_event"
                                android:background="@android:color/transparent"/>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@mipmap/exit"
                                android:id="@+id/iv_exit"
                                android:layout_centerInParent="true"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/exit_btn"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:id="@+id/tv_exit"
                                android:fontFamily="sans-serif-condensed"
                                android:layout_centerInParent="true"
                                android:layout_below="@+id/iv_exit"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                />
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button_exit"
                                android:background="@android:color/transparent"/>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>